--- a/spec/fixtures/vcr_cassettes/all_projects.yml
+++ b/spec/fixtures/vcr_cassettes/all_projects.yml
@@ -21,7 +21,7 @@ http_interactions:
       server:
       - nginx
       date:
-      - Mon, 19 Nov 2018 14:54:36 GMT
+      - Mon, 03 Dec 2018 19:26:02 GMT
       content-type:
       - application/json
       transfer-encoding:
@@ -31,8 +31,8 @@ http_interactions:
       vary:
       - Accept-Encoding
       set-cookie:
-      - PHPSESSID=aec2bca57fb3b5ee0c2885ab7e925169; path=/; HttpOnly, locale=en_US;
-        expires=Wed, 19-Dec-2018 14:54:36 GMT; Max-Age=2592000; path=/; secure
+      - PHPSESSID=70d3b5e722b31e636bafc9610629fb24; path=/; HttpOnly, locale=en_US;
+        expires=Wed, 02-Jan-2019 19:26:01 GMT; Max-Age=2592000; path=/; secure
       expires:
       - Thu, 19 Nov 1981 08:52:00 GMT
       cache-control:
@@ -48,7 +48,7 @@ http_interactions:
       strict-transport-security:
       - max-age=31536000
       x-pagination-total-count:
-      - '3'
+      - '5'
       x-pagination-page-count:
       - '1'
       x-pagination-limit:
@@ -62,11 +62,13 @@ http_interactions:
     body:
       encoding: ASCII-8BIT
       string: '{"projects":[{"project_id":"803826145ba90b42d5d860.46800099","name":"demo
-        phoenix","description":"","created_at":"2018-09-24 18:05:22 (Etc\/UTC)","created_by":20181,"created_by_email":"bodrovis@protonmail.com","team_id":176692,"statistics":{"progress":50,"keys":1,"team":1,"base_words":0,"qa_issues":1,"languages":[{"language_id":640,"language_iso":"en","progress":0,"words_to_do":0},{"language_id":597,"language_iso":"ru","progress":100,"words_to_do":0}]}},{"project_id":"672198945b7d72fc048021.15940510","name":"Demo
-        Rails Proj","description":"","created_at":"2018-08-22 16:28:12 (Etc\/UTC)","created_by":20181,"created_by_email":"bodrovis@protonmail.com","team_id":176692,"statistics":{"progress":95,"keys":10,"team":1,"base_words":38,"qa_issues":11,"languages":[{"language_id":640,"language_iso":"en","progress":100,"words_to_do":0},{"language_id":597,"language_iso":"ru","progress":90,"words_to_do":1}]}},{"project_id":"963054665b7c313dd9b323.35886655","name":"Sample
+        phoenix","description":"","created_at":"2018-09-24 18:05:22 (Etc\/UTC)","created_by":20181,"created_by_email":"bodrovis@protonmail.com","team_id":176692,"statistics":{"progress":33,"keys":1,"team":1,"base_words":1,"qa_issues":1,"languages":[{"language_id":640,"language_iso":"en","progress":100,"words_to_do":0},{"language_id":597,"language_iso":"ru","progress":0,"words_to_do":1},{"language_id":673,"language_iso":"f_over","progress":0,"words_to_do":1}]}},{"project_id":"547879415c01a0e6e0b855.29978928","name":"demo
+        phoenix copy","description":"","created_at":"2018-11-30 20:43:18 (Etc\/UTC)","created_by":20181,"created_by_email":"bodrovis@protonmail.com","team_id":176692,"statistics":{"progress":0,"keys":1,"team":1,"base_words":0,"qa_issues":1,"languages":[{"language_id":640,"language_iso":"en","progress":0,"words_to_do":0},{"language_id":597,"language_iso":"ru","progress":0,"words_to_do":0},{"language_id":673,"language_iso":"f_over","progress":0,"words_to_do":0}]}},{"project_id":"446952185c01a12b4d0b45.76217122","name":"demo
+        phoenix copy","description":"","created_at":"2018-11-30 20:44:27 (Etc\/UTC)","created_by":20181,"created_by_email":"bodrovis@protonmail.com","team_id":176692,"statistics":{"progress":0,"keys":1,"team":1,"base_words":0,"qa_issues":1,"languages":[{"language_id":640,"language_iso":"en","progress":0,"words_to_do":0},{"language_id":597,"language_iso":"ru","progress":0,"words_to_do":0},{"language_id":673,"language_iso":"f_over","progress":0,"words_to_do":0}]}},{"project_id":"672198945b7d72fc048021.15940510","name":"Demo
+        Rails Proj","description":"","created_at":"2018-08-22 16:28:12 (Etc\/UTC)","created_by":20181,"created_by_email":"bodrovis@protonmail.com","team_id":176692,"statistics":{"progress":98,"keys":10,"team":1,"base_words":37,"qa_issues":11,"languages":[{"language_id":640,"language_iso":"en","progress":100,"words_to_do":0},{"language_id":597,"language_iso":"ru","progress":97,"words_to_do":1}]}},{"project_id":"963054665b7c313dd9b323.35886655","name":"Sample
         Project","description":"Lokalise sample project. Click title to edit in multilanguage
         view. You can delete it in project settings.","created_at":"2018-08-21 15:35:25
-        (Etc\/UTC)","created_by":20181,"created_by_email":"bodrovis@protonmail.com","team_id":176692,"statistics":{"progress":29,"keys":12,"team":1,"base_words":186,"qa_issues":13,"languages":[{"language_id":640,"language_iso":"en","progress":91,"words_to_do":0},{"language_id":597,"language_iso":"ru","progress":50,"words_to_do":49},{"language_id":673,"language_iso":"fr","progress":8,"words_to_do":160},{"language_id":666,"language_iso":"de","progress":25,"words_to_do":182},{"language_id":643,"language_iso":"ja","progress":16,"words_to_do":183},{"language_id":766,"language_iso":"he","progress":16,"words_to_do":183},{"language_id":602,"language_iso":"zh_CN","progress":0,"words_to_do":186}]}}]}'
+        (Etc\/UTC)","created_by":20181,"created_by_email":"bodrovis@protonmail.com","team_id":176692,"statistics":{"progress":27,"keys":12,"team":1,"base_words":185,"qa_issues":13,"languages":[{"language_id":640,"language_iso":"en","progress":100,"words_to_do":0},{"language_id":597,"language_iso":"ru","progress":73,"words_to_do":49},{"language_id":673,"language_iso":"fr","progress":14,"words_to_do":159},{"language_id":666,"language_iso":"de","progress":2,"words_to_do":181},{"language_id":643,"language_iso":"ja","progress":1,"words_to_do":182},{"language_id":766,"language_iso":"he","progress":1,"words_to_do":182},{"language_id":602,"language_iso":"zh_CN","progress":0,"words_to_do":185}]}}]}'
     http_version: 
-  recorded_at: Mon, 19 Nov 2018 14:54:35 GMT
+  recorded_at: Mon, 03 Dec 2018 19:26:02 GMT
 recorded_with: VCR 4.0.0
