--- a/spec/fixtures/vcr_cassettes/all_projects_pagination.yml
+++ b/spec/fixtures/vcr_cassettes/all_projects_pagination.yml
@@ -21,7 +21,7 @@ http_interactions:
       server:
       - nginx
       date:
-      - Mon, 19 Nov 2018 14:54:37 GMT
+      - Mon, 03 Dec 2018 19:26:01 GMT
       content-type:
       - application/json
       transfer-encoding:
@@ -31,8 +31,8 @@ http_interactions:
       vary:
       - Accept-Encoding
       set-cookie:
-      - PHPSESSID=f2b107493712a3f132e6299acf06ab13; path=/; HttpOnly, locale=en_US;
-        expires=Wed, 19-Dec-2018 14:54:37 GMT; Max-Age=2592000; path=/; secure
+      - PHPSESSID=1d5aee2afe3a4ba8ff78c4d083f263b1; path=/; HttpOnly, locale=en_US;
+        expires=Wed, 02-Jan-2019 19:26:01 GMT; Max-Age=2592000; path=/; secure
       expires:
       - Thu, 19 Nov 1981 08:52:00 GMT
       cache-control:
@@ -48,9 +48,9 @@ http_interactions:
       strict-transport-security:
       - max-age=31536000
       x-pagination-total-count:
-      - '3'
+      - '5'
       x-pagination-page-count:
-      - '3'
+      - '5'
       x-pagination-limit:
       - '1'
       x-pagination-page:
@@ -61,8 +61,8 @@ http_interactions:
       - Content-Type
     body:
       encoding: ASCII-8BIT
-      string: '{"projects":[{"project_id":"672198945b7d72fc048021.15940510","name":"Demo
-        Rails Proj","description":"","created_at":"2018-08-22 16:28:12 (Etc\/UTC)","created_by":20181,"created_by_email":"bodrovis@protonmail.com","team_id":176692,"statistics":{"progress":95,"keys":10,"team":1,"base_words":38,"qa_issues":11,"languages":[{"language_id":640,"language_iso":"en","progress":100,"words_to_do":0},{"language_id":597,"language_iso":"ru","progress":90,"words_to_do":1}]}}]}'
+      string: '{"projects":[{"project_id":"547879415c01a0e6e0b855.29978928","name":"demo
+        phoenix copy","description":"","created_at":"2018-11-30 20:43:18 (Etc\/UTC)","created_by":20181,"created_by_email":"bodrovis@protonmail.com","team_id":176692,"statistics":{"progress":0,"keys":1,"team":1,"base_words":0,"qa_issues":1,"languages":[{"language_id":640,"language_iso":"en","progress":0,"words_to_do":0},{"language_id":597,"language_iso":"ru","progress":0,"words_to_do":0},{"language_id":673,"language_iso":"f_over","progress":0,"words_to_do":0}]}}]}'
     http_version: 
-  recorded_at: Mon, 19 Nov 2018 14:54:35 GMT
+  recorded_at: Mon, 03 Dec 2018 19:26:01 GMT
 recorded_with: VCR 4.0.0
