--- a/spec/fixtures/vcr_cassettes/project.yml
+++ b/spec/fixtures/vcr_cassettes/project.yml
@@ -21,7 +21,7 @@ http_interactions:
       server:
       - nginx
       date:
-      - Mon, 19 Nov 2018 15:27:10 GMT
+      - Mon, 03 Dec 2018 19:35:38 GMT
       content-type:
       - application/json
       transfer-encoding:
@@ -31,8 +31,8 @@ http_interactions:
       vary:
       - Accept-Encoding
       set-cookie:
-      - PHPSESSID=195ee4927d97d315cd127f3bf116bb67; path=/; HttpOnly, locale=en_US;
-        expires=Wed, 19-Dec-2018 15:27:10 GMT; Max-Age=2592000; path=/; secure
+      - PHPSESSID=a3f58dfcc9e3ce098630c3ad74d4ec01; path=/; HttpOnly, locale=en_US;
+        expires=Wed, 02-Jan-2019 19:35:38 GMT; Max-Age=2592000; path=/; secure
       expires:
       - Thu, 19 Nov 1981 08:52:00 GMT
       cache-control:
@@ -54,7 +54,7 @@ http_interactions:
     body:
       encoding: ASCII-8BIT
       string: '{"project_id":"803826145ba90b42d5d860.46800099","name":"demo phoenix","description":"","created_at":"2018-09-24
-        18:05:22 (Etc\/UTC)","created_by":20181,"created_by_email":"bodrovis@protonmail.com","team_id":176692,"statistics":{"progress":50,"keys":1,"team":1,"base_words":0,"qa_issues":1,"languages":[{"language_id":640,"language_iso":"en","progress":0,"words_to_do":0},{"language_id":597,"language_iso":"ru","progress":100,"words_to_do":0}]}}'
+        18:05:22 (Etc\/UTC)","created_by":20181,"created_by_email":"bodrovis@protonmail.com","team_id":176692,"statistics":{"progress":33,"keys":1,"team":1,"base_words":1,"qa_issues":1,"languages":[{"language_id":640,"language_iso":"en","progress":100,"words_to_do":0},{"language_id":597,"language_iso":"ru","progress":0,"words_to_do":1},{"language_id":673,"language_iso":"f_over","progress":0,"words_to_do":1}]}}'
     http_version: 
-  recorded_at: Mon, 19 Nov 2018 15:27:08 GMT
+  recorded_at: Mon, 03 Dec 2018 19:35:38 GMT
 recorded_with: VCR 4.0.0
