--- a/spec/fixtures/vcr_cassettes/all_translations_pagination.yml
+++ b/spec/fixtures/vcr_cassettes/all_translations_pagination.yml
@@ -2,7 +2,7 @@
 http_interactions:
 - request:
     method: get
-    uri: https://api.lokalise.co/api2/projects/803826145ba90b42d5d860.46800099/translations?limit=4&page=2
+    uri: https://api.lokalise.co/api2/projects/803826145ba90b42d5d860.46800099/translations?disable_references=0&limit=4&page=2
     body:
       encoding: US-ASCII
       string: ''
@@ -10,7 +10,7 @@ http_interactions:
       Accept:
       - application/json
       User-Agent:
-      - ruby-lokalise-api gem/1.0.0.pre1
+      - ruby-lokalise-api gem/1.0.1
       X-api-token:
       - "<LOKALISE_TOKEN>"
   response:
@@ -21,7 +21,7 @@ http_interactions:
       server:
       - nginx
       date:
-      - Mon, 10 Dec 2018 17:59:31 GMT
+      - Tue, 11 Dec 2018 16:15:46 GMT
       content-type:
       - application/json
       transfer-encoding:
@@ -31,8 +31,8 @@ http_interactions:
       vary:
       - Accept-Encoding
       set-cookie:
-      - PHPSESSID=2a52911c47df2fdcb8379db1a5658aa2; path=/; HttpOnly, locale=en_US;
-        expires=Wed, 09-Jan-2019 17:59:31 GMT; Max-Age=2592000; path=/; secure
+      - PHPSESSID=a25288df3a17213c14a3db4a0636eecd; path=/; HttpOnly, locale=en_US;
+        expires=Thu, 10-Jan-2019 16:15:46 GMT; Max-Age=2592000; path=/; secure
       expires:
       - Thu, 19 Nov 1981 08:52:00 GMT
       cache-control:
@@ -61,11 +61,12 @@ http_interactions:
       - Content-Type
     body:
       encoding: ASCII-8BIT
-      string: '{"project_id":"803826145ba90b42d5d860.46800099","translations":[{"translation_id":80015147,"key_id":15571975,"language_iso":"en","translation":"","modified_by":20181,"modified_by_email":"bodrovis@protonmail.com","modified_at":"2018-12-10
-        18:35:35 (Etc\/UTC)","is_reviewed":false,"reviewed_by":0,"is_fuzzy":false,"words":0},{"translation_id":80015150,"key_id":15571976,"language_iso":"en","translation":"","modified_by":20181,"modified_by_email":"bodrovis@protonmail.com","modified_at":"2018-12-10
+      string: '{"project_id":"803826145ba90b42d5d860.46800099","translations":[{"translation_id":80015147,"key_id":15571975,"language_iso":"en","translation":"rspec
+        trans","modified_by":20181,"modified_by_email":"bodrovis@protonmail.com","modified_at":"2018-12-10
+        19:04:08 (Etc\/UTC)","is_reviewed":true,"reviewed_by":0,"is_fuzzy":false,"words":2},{"translation_id":80015150,"key_id":15571976,"language_iso":"en","translation":"","modified_by":20181,"modified_by_email":"bodrovis@protonmail.com","modified_at":"2018-12-10
         18:36:41 (Etc\/UTC)","is_reviewed":false,"reviewed_by":0,"is_fuzzy":false,"words":0},{"translation_id":79607648,"key_id":15519786,"language_iso":"f_over","translation":"","modified_by":20181,"modified_by_email":"bodrovis@protonmail.com","modified_at":"2018-12-09
         19:39:20 (Etc\/UTC)","is_reviewed":false,"reviewed_by":0,"is_fuzzy":false,"words":0},{"translation_id":80015149,"key_id":15571975,"language_iso":"f_over","translation":"","modified_by":20181,"modified_by_email":"bodrovis@protonmail.com","modified_at":"2018-12-10
         18:35:35 (Etc\/UTC)","is_reviewed":false,"reviewed_by":0,"is_fuzzy":false,"words":0}]}'
     http_version: 
-  recorded_at: Mon, 10 Dec 2018 17:59:31 GMT
+  recorded_at: Tue, 11 Dec 2018 16:15:44 GMT
 recorded_with: VCR 4.0.0
