--- a/spec/fixtures/vcr_cassettes/create_task.yml
+++ b/spec/fixtures/vcr_cassettes/create_task.yml
@@ -2,7 +2,7 @@
 http_interactions:
 - request:
     method: post
-    uri: https://api.lokalise.co/api2/projects/803826145ba90b42d5d860.46800099/tasks
+    uri: https://api.lokalise.co/api2/projects/803826145ba90b42d5d860.46800099/tasks/
     body:
       encoding: UTF-8
       string: '{"title":"another rspec key","keys":[15571976],"languages":[{"language_iso":"ru","users":["20181"]}]}'
