--- a/spec/fixtures/vcr_cassettes/all_projects_pagination.yml
+++ b/spec/fixtures/vcr_cassettes/all_projects_pagination.yml
@@ -2,7 +2,7 @@
 http_interactions:
 - request:
     method: get
-    uri: https://api.lokalise.co/api2/projects?limit=1&page=2
+    uri: https://api.lokalise.co/api2/projects/?limit=1&page=2
     body:
       encoding: US-ASCII
       string: ''
