--- a/spec/fixtures/vcr_cassettes/all_translations_pagination.yml
+++ b/spec/fixtures/vcr_cassettes/all_translations_pagination.yml
@@ -2,7 +2,7 @@
 http_interactions:
 - request:
     method: get
-    uri: https://api.lokalise.co/api2/projects/803826145ba90b42d5d860.46800099/translations?disable_references=0&limit=4&page=2
+    uri: https://api.lokalise.co/api2/projects/803826145ba90b42d5d860.46800099/translations?disable_references=0&filter_is_reviewed=0&limit=4&page=2
     body:
       encoding: US-ASCII
       string: ''
@@ -10,7 +10,7 @@ http_interactions:
       Accept:
       - application/json
       User-Agent:
-      - ruby-lokalise-api gem/1.0.1
+      - ruby-lokalise-api gem/2.1.0
       X-api-token:
       - "<LOKALISE_TOKEN>"
   response:
@@ -21,7 +21,7 @@ http_interactions:
       server:
       - nginx
       date:
-      - Tue, 11 Dec 2018 16:15:46 GMT
+      - Fri, 17 May 2019 16:46:19 GMT
       content-type:
       - application/json
       transfer-encoding:
@@ -31,26 +31,18 @@ http_interactions:
       vary:
       - Accept-Encoding
       set-cookie:
-      - PHPSESSID=a25288df3a17213c14a3db4a0636eecd; path=/; HttpOnly, locale=en_US;
-        expires=Thu, 10-Jan-2019 16:15:46 GMT; Max-Age=2592000; path=/; secure
+      - PHPSESSID=75fb6ca05c9232dc40fdf4873d412e88; expires=Tue, 16-Jul-2019 16:46:19
+        GMT; Max-Age=5184000; path=/; secure; HttpOnly
       expires:
       - Thu, 19 Nov 1981 08:52:00 GMT
       cache-control:
       - no-store, no-cache, must-revalidate, no-store, no-cache
       pragma:
       - no-cache, no-cache
-      x-content-type-options:
-      - nosniff
-      x-frame-options:
-      - deny
-      x-xss-protection:
-      - 1; mode=block
-      strict-transport-security:
-      - max-age=31536000
       x-pagination-total-count:
-      - '9'
+      - '187'
       x-pagination-page-count:
-      - '3'
+      - '47'
       x-pagination-limit:
       - '4'
       x-pagination-page:
@@ -61,12 +53,15 @@ http_interactions:
       - Content-Type
     body:
       encoding: ASCII-8BIT
-      string: '{"project_id":"803826145ba90b42d5d860.46800099","translations":[{"translation_id":80015147,"key_id":15571975,"language_iso":"en","translation":"rspec
-        trans","modified_by":20181,"modified_by_email":"bodrovis@protonmail.com","modified_at":"2018-12-10
-        19:04:08 (Etc\/UTC)","is_reviewed":true,"reviewed_by":0,"is_fuzzy":false,"words":2},{"translation_id":80015150,"key_id":15571976,"language_iso":"en","translation":"","modified_by":20181,"modified_by_email":"bodrovis@protonmail.com","modified_at":"2018-12-10
-        18:36:41 (Etc\/UTC)","is_reviewed":false,"reviewed_by":0,"is_fuzzy":false,"words":0},{"translation_id":79607648,"key_id":15519786,"language_iso":"f_over","translation":"","modified_by":20181,"modified_by_email":"bodrovis@protonmail.com","modified_at":"2018-12-09
-        19:39:20 (Etc\/UTC)","is_reviewed":false,"reviewed_by":0,"is_fuzzy":false,"words":0},{"translation_id":80015149,"key_id":15571975,"language_iso":"f_over","translation":"","modified_by":20181,"modified_by_email":"bodrovis@protonmail.com","modified_at":"2018-12-10
-        18:35:35 (Etc\/UTC)","is_reviewed":false,"reviewed_by":0,"is_fuzzy":false,"words":0}]}'
+      string: '{"project_id":"803826145ba90b42d5d860.46800099","translations":[{"translation_id":100688218,"key_id":18925476,"language_iso":"ru","translation":"","modified_by":20181,"modified_by_email":"bodrovis@protonmail.com","modified_at":"2019-02-27
+        15:42:46 (Etc\/UTC)","modified_at_timestamp":1551282166,"is_reviewed":false,"reviewed_by":0,"is_fuzzy":false,"words":0},{"translation_id":113286661,"key_id":20822936,"language_iso":"ru","translation":"","modified_by":33599,"modified_by_email":"twilight_church@list.ru","modified_at":"2019-05-13
+        16:12:29 (Etc\/UTC)","modified_at_timestamp":1557763949,"is_reviewed":true,"reviewed_by":33599,"is_fuzzy":false,"words":0},{"translation_id":114013996,"key_id":20945747,"language_iso":"ru","translation":"\u0414\u043e\u0431\u0440\u043e
+        \u043f\u043e\u0436\u0430\u043b\u043e\u0432\u0430\u0442\u044c","modified_by":33599,"modified_by_email":"twilight_church@list.ru","modified_at":"2019-05-13
+        16:05:07 (Etc\/UTC)","modified_at_timestamp":1557763507,"is_reviewed":true,"reviewed_by":33599,"is_fuzzy":false,"words":2},{"translation_id":114304537,"key_id":20988544,"language_iso":"ru","translation":"\u0412\u044b
+        \u0442\u0430\u043a\u0436\u0435 \u0434\u043e\u043b\u0436\u043d\u044b \u043d\u0430\u0441\u0442\u0440\u043e\u0438\u0442\u044c
+        \u0444\u0443\u043d\u043a\u0446\u0438\u044e \u043e\u0431\u0440\u0430\u0442\u043d\u043e\u0433\u043e
+        \u0432\u044b\u0437\u043e\u0432\u0430","modified_by":33599,"modified_by_email":"twilight_church@list.ru","modified_at":"2019-05-13
+        15:52:38 (Etc\/UTC)","modified_at_timestamp":1557762758,"is_reviewed":false,"reviewed_by":0,"is_fuzzy":false,"words":7}]}'
     http_version: 
-  recorded_at: Tue, 11 Dec 2018 16:15:44 GMT
+  recorded_at: Fri, 17 May 2019 16:46:08 GMT
 recorded_with: VCR 4.0.0
