--- a/spec/fixtures/vcr_cassettes/comment.yml
+++ b/spec/fixtures/vcr_cassettes/comment.yml
@@ -10,7 +10,7 @@ http_interactions:
       Accept:
       - application/json
       User-Agent:
-      - ruby-lokalise-api gem/1.0.0.pre1
+      - ruby-lokalise-api gem/2.1.0
       X-api-token:
       - "<LOKALISE_TOKEN>"
   response:
@@ -21,7 +21,7 @@ http_interactions:
       server:
       - nginx
       date:
-      - Sun, 09 Dec 2018 18:42:09 GMT
+      - Fri, 17 May 2019 16:58:57 GMT
       content-type:
       - application/json
       transfer-encoding:
@@ -31,22 +31,14 @@ http_interactions:
       vary:
       - Accept-Encoding
       set-cookie:
-      - PHPSESSID=874569bbe0251f1f57414443aea735c5; path=/; HttpOnly, locale=en_US;
-        expires=Tue, 08-Jan-2019 18:42:09 GMT; Max-Age=2592000; path=/; secure
+      - PHPSESSID=ba2f4222776bc446ee77f5ff790e487c; expires=Tue, 16-Jul-2019 16:58:57
+        GMT; Max-Age=5184000; path=/; secure; HttpOnly
       expires:
       - Thu, 19 Nov 1981 08:52:00 GMT
       cache-control:
       - no-store, no-cache, must-revalidate, no-store, no-cache
       pragma:
       - no-cache, no-cache
-      x-content-type-options:
-      - nosniff
-      x-frame-options:
-      - deny
-      x-xss-protection:
-      - 1; mode=block
-      strict-transport-security:
-      - max-age=31536000
       access-control-allow-origin:
       - "*"
       access-control-allow-headers:
@@ -55,7 +47,7 @@ http_interactions:
       encoding: ASCII-8BIT
       string: '{"project_id":"803826145ba90b42d5d860.46800099","comment":{"comment_id":800746,"key_id":15519786,"comment":"rspec
         comment","added_by":20181,"added_by_email":"bodrovis@protonmail.com","added_at":"2018-12-09
-        19:41:44 (Etc\/UTC)"}}'
+        18:41:44 (Etc\/UTC)","added_at_timestamp":1544380904}}'
     http_version: 
-  recorded_at: Sun, 09 Dec 2018 18:42:08 GMT
+  recorded_at: Fri, 17 May 2019 16:58:45 GMT
 recorded_with: VCR 4.0.0
