--- a/spec/fixtures/vcr_cassettes/create_another_snapshot.yml
+++ b/spec/fixtures/vcr_cassettes/create_another_snapshot.yml
@@ -2,7 +2,7 @@
 http_interactions:
 - request:
     method: post
-    uri: https://api.lokalise.co/api2/projects/803826145ba90b42d5d860.46800099/snapshots/
+    uri: https://api.lokalise.co/api2/projects/803826145ba90b42d5d860.46800099/snapshots
     body:
       encoding: UTF-8
       string: '{"title":"chained"}'
