--- a/spec/fixtures/vcr_cassettes/create_contributors.yml
+++ b/spec/fixtures/vcr_cassettes/create_contributors.yml
@@ -2,7 +2,7 @@
 http_interactions:
 - request:
     method: post
-    uri: https://api.lokalise.co/api2/projects/803826145ba90b42d5d860.46800099/contributors/
+    uri: https://api.lokalise.co/api2/projects/803826145ba90b42d5d860.46800099/contributors
     body:
       encoding: UTF-8
       string: '{"contributors":[{"email":"rspec@test.com","fullname":"Rspec test","languages":[{"lang_iso":"en"},{"lang_iso":"ru"}]}]}'
