--- a/spec/fixtures/vcr_cassettes/create_keys_collection.yml
+++ b/spec/fixtures/vcr_cassettes/create_keys_collection.yml
@@ -2,7 +2,7 @@
 http_interactions:
 - request:
     method: post
-    uri: https://api.lokalise.co/api2/projects/803826145ba90b42d5d860.46800099/keys/
+    uri: https://api.lokalise.co/api2/projects/803826145ba90b42d5d860.46800099/keys
     body:
       encoding: UTF-8
       string: '{"keys":[{"key_name":"key_collect1","platforms":["ios"]},{"key_name":"key_collect2","platforms":["ios"]}]}'
