--- a/spec/fixtures/vcr_cassettes/project.yml
+++ b/spec/fixtures/vcr_cassettes/project.yml
@@ -2,7 +2,7 @@
 http_interactions:
 - request:
     method: get
-    uri: https://api.lokalise.co/api2/projects/803826145ba90b42d5d860.46800099/
+    uri: https://api.lokalise.co/api2/projects/803826145ba90b42d5d860.46800099
     body:
       encoding: US-ASCII
       string: ''
@@ -10,7 +10,7 @@ http_interactions:
       Accept:
       - application/json
       User-Agent:
-      - ruby-lokalise-api gem/1.0.0.pre1
+      - ruby-lokalise-api gem/2.1.0
       X-api-token:
       - "<LOKALISE_TOKEN>"
   response:
@@ -21,7 +21,7 @@ http_interactions:
       server:
       - nginx
       date:
-      - Mon, 03 Dec 2018 19:35:38 GMT
+      - Fri, 17 May 2019 16:25:47 GMT
       content-type:
       - application/json
       transfer-encoding:
@@ -31,22 +31,14 @@ http_interactions:
       vary:
       - Accept-Encoding
       set-cookie:
-      - PHPSESSID=a3f58dfcc9e3ce098630c3ad74d4ec01; path=/; HttpOnly, locale=en_US;
-        expires=Wed, 02-Jan-2019 19:35:38 GMT; Max-Age=2592000; path=/; secure
+      - PHPSESSID=c8f5a243dde5e31b8b8546ff15f971af; expires=Tue, 16-Jul-2019 16:25:47
+        GMT; Max-Age=5184000; path=/; secure; HttpOnly
       expires:
       - Thu, 19 Nov 1981 08:52:00 GMT
       cache-control:
       - no-store, no-cache, must-revalidate, no-store, no-cache
       pragma:
       - no-cache, no-cache
-      x-content-type-options:
-      - nosniff
-      x-frame-options:
-      - deny
-      x-xss-protection:
-      - 1; mode=block
-      strict-transport-security:
-      - max-age=31536000
       access-control-allow-origin:
       - "*"
       access-control-allow-headers:
@@ -54,7 +46,7 @@ http_interactions:
     body:
       encoding: ASCII-8BIT
       string: '{"project_id":"803826145ba90b42d5d860.46800099","name":"demo phoenix","description":"","created_at":"2018-09-24
-        18:05:22 (Etc\/UTC)","created_by":20181,"created_by_email":"bodrovis@protonmail.com","team_id":176692,"statistics":{"progress":33,"keys":1,"team":1,"base_words":1,"qa_issues":1,"languages":[{"language_id":640,"language_iso":"en","progress":100,"words_to_do":0},{"language_id":597,"language_iso":"ru","progress":0,"words_to_do":1},{"language_id":673,"language_iso":"f_over","progress":0,"words_to_do":1}]}}'
+        16:05:22 (Etc\/UTC)","created_at_timestamp":1537805122,"created_by":20181,"created_by_email":"bodrovis@protonmail.com","team_id":176692,"base_language_id":640,"base_language_iso":"en","settings":{"per_platform_key_names":false,"reviewing":true,"upvoting":false,"auto_toggle_unverified":true,"offline_translation":true,"key_editing":true,"inline_machine_translations":true},"statistics":{"progress_total":18,"keys_total":17,"team":8,"base_words":39,"qa_issues_total":229,"qa_issues":{"not_reviewed":158,"unverified":66,"spelling_grammar":4,"inconsistent_placeholders":1,"inconsistent_html":0,"different_number_of_urls":0,"different_urls":0,"leading_whitespace":0,"trailing_whitespace":0,"different_number_of_email_address":0,"different_email_address":0,"different_brackets":0,"different_numbers":0,"double_space":0,"special_placeholder":0},"languages":[{"language_id":640,"language_iso":"en","progress":100,"words_to_do":0},{"language_id":597,"language_iso":"ru","progress":66,"words_to_do":13},{"language_id":673,"language_iso":"f_over","progress":25,"words_to_do":29},{"language_id":1055,"language_iso":"en-us","progress":0,"words_to_do":39},{"language_id":10111,"language_iso":"custom_111","progress":0,"words_to_do":39},{"language_id":764,"language_iso":"ca","progress":2,"words_to_do":38},{"language_id":934,"language_iso":"bm","progress":0,"words_to_do":39},{"language_id":803,"language_iso":"sq","progress":0,"words_to_do":39},{"language_id":731,"language_iso":"ar_001","progress":2,"words_to_do":38},{"language_id":601,"language_iso":"zh_TW","progress":0,"words_to_do":39},{"language_id":1056,"language_iso":"es","progress":10,"words_to_do":35}]}}'
     http_version: 
-  recorded_at: Mon, 03 Dec 2018 19:35:38 GMT
+  recorded_at: Fri, 17 May 2019 16:25:35 GMT
 recorded_with: VCR 4.0.0
