--- a/spec/fixtures/vcr_cassettes/task.yml
+++ b/spec/fixtures/vcr_cassettes/task.yml
@@ -2,7 +2,7 @@
 http_interactions:
 - request:
     method: get
-    uri: https://api.lokalise.co/api2/projects/803826145ba90b42d5d860.46800099/tasks/4387
+    uri: https://api.lokalise.co/api2/projects/803826145ba90b42d5d860.46800099/tasks/11925
     body:
       encoding: US-ASCII
       string: ''
@@ -10,7 +10,7 @@ http_interactions:
       Accept:
       - application/json
       User-Agent:
-      - ruby-lokalise-api gem/1.0.0.pre1
+      - ruby-lokalise-api gem/2.1.0
       X-api-token:
       - "<LOKALISE_TOKEN>"
   response:
@@ -21,7 +21,7 @@ http_interactions:
       server:
       - nginx
       date:
-      - Mon, 10 Dec 2018 17:43:53 GMT
+      - Fri, 17 May 2019 17:16:04 GMT
       content-type:
       - application/json
       transfer-encoding:
@@ -31,32 +31,35 @@ http_interactions:
       vary:
       - Accept-Encoding
       set-cookie:
-      - PHPSESSID=784a94c16d022c3e400033393ad052dd; path=/; HttpOnly, locale=en_US;
-        expires=Wed, 09-Jan-2019 17:43:52 GMT; Max-Age=2592000; path=/; secure
+      - PHPSESSID=c7250947867ec61b1f49a3a1abd3706e; expires=Tue, 16-Jul-2019 17:16:02
+        GMT; Max-Age=5184000; path=/; secure; HttpOnly
       expires:
       - Thu, 19 Nov 1981 08:52:00 GMT
       cache-control:
       - no-store, no-cache, must-revalidate, no-store, no-cache
       pragma:
       - no-cache, no-cache
-      x-content-type-options:
-      - nosniff
-      x-frame-options:
-      - deny
-      x-xss-protection:
-      - 1; mode=block
-      strict-transport-security:
-      - max-age=31536000
       access-control-allow-origin:
       - "*"
       access-control-allow-headers:
       - Content-Type
     body:
       encoding: ASCII-8BIT
-      string: '{"project_id":"803826145ba90b42d5d860.46800099","task":{"task_id":4387,"title":"another
-        rspec key","can_be_parent":true,"task_type":"translation","parent_task_id":null,"closing_tags":[],"description":"desc
-        here","status":"created","progress":0,"due_date":null,"keys_count":1,"words_count":0,"created_at":"2018-12-10
-        18:37:02 (Etc\/UTC)","created_by":20181,"created_by_email":"bodrovis@protonmail.com","languages":[{"language_iso":"ru","users":[{"user_id":20181,"email":"bodrovis@protonmail.com","fullname":"Ilya"}],"keys":[15571976],"status":"created","progress":0,"initial_tm_leverage":[],"keys_count":1,"words_count":0,"completed_at":null,"completed_by":null,"completed_by_email":null}],"auto_close_languages":true,"auto_close_task":true,"completed_at":null,"completed_by":null,"completed_by_email":null}}'
+      string: '{"project_id":"803826145ba90b42d5d860.46800099","task":{"task_id":11925,"title":"Demo
+        review","can_be_parent":true,"task_type":"review","parent_task_id":null,"closing_tags":[],"description":"","status":"in
+        progress","progress":1,"due_date":null,"due_date_timestamp":null,"keys_count":16,"words_count":275,"created_at":"2019-05-13
+        16:15:26 (Etc\/UTC)","created_at_timestamp":1557764126,"created_by":20181,"created_by_email":"bodrovis@protonmail.com","languages":[{"language_iso":"sq","users":[{"user_id":20181,"email":"bodrovis@protonmail.com","fullname":"Ilya
+        B"}],"groups":[],"keys":[15519786,15571975,15571976,15814906,20822936,20945747,20988544,20988547,20988554,20988567,20988568,20988569,20988570,20988571,20988596,21717815],"status":"created","progress":0,"initial_tm_leverage":[],"keys_count":16,"words_count":37,"completed_at":null,"completed_at_timestamp":null,"completed_by":null,"completed_by_email":null},{"language_iso":"ar_001","users":[{"user_id":20181,"email":"bodrovis@protonmail.com","fullname":"Ilya
+        B"},{"user_id":33599,"email":"twilight_church@list.ru","fullname":"Joe"}],"groups":[],"keys":[15519786,15571975,15571976,15814906,20822936,20945747,20988544,20988547,20988567,20988568,20988569,20988570,20988571,20988596,21717815],"status":"created","progress":0,"initial_tm_leverage":[],"keys_count":15,"words_count":36,"completed_at":null,"completed_at_timestamp":null,"completed_by":null,"completed_by_email":null},{"language_iso":"bm","users":[{"user_id":20181,"email":"bodrovis@protonmail.com","fullname":"Ilya
+        B"},{"user_id":33599,"email":"twilight_church@list.ru","fullname":"Joe"}],"groups":[],"keys":[20822936,20945747,20988544,20988547,20988554,20988567,20988568,20988569,20988570,20988571,20988596,21717815],"status":"created","progress":0,"initial_tm_leverage":[],"keys_count":12,"words_count":17,"completed_at":null,"completed_at_timestamp":null,"completed_by":null,"completed_by_email":null},{"language_iso":"ca","users":[{"user_id":20181,"email":"bodrovis@protonmail.com","fullname":"Ilya
+        B"},{"user_id":33599,"email":"twilight_church@list.ru","fullname":"Joe"}],"groups":[],"keys":[20822936,20945747,20988544,20988547,20988567,20988568,20988569,20988570,20988571,20988596,21717815],"status":"created","progress":0,"initial_tm_leverage":[],"keys_count":11,"words_count":16,"completed_at":null,"completed_at_timestamp":null,"completed_by":null,"completed_by_email":null},{"language_iso":"zh_TW","users":[{"user_id":20181,"email":"bodrovis@protonmail.com","fullname":"Ilya
+        B"}],"groups":[],"keys":[15519786,15814906,20822936,20945747,20988544,20988547,20988554,20988567,20988568,20988569,20988570,20988571,20988596,21717815],"status":"created","progress":0,"initial_tm_leverage":[],"keys_count":14,"words_count":29,"completed_at":null,"completed_at_timestamp":null,"completed_by":null,"completed_by_email":null},{"language_iso":"custom_111","users":[{"user_id":20181,"email":"bodrovis@protonmail.com","fullname":"Ilya
+        B"},{"user_id":33599,"email":"twilight_church@list.ru","fullname":"Joe"}],"groups":[],"keys":[15519786,15571975,15571976,15814906,20822936,20945747,20988544,20988547,20988554,20988567,20988568,20988569,20988570,20988571,20988596,21717815],"status":"created","progress":0,"initial_tm_leverage":[],"keys_count":16,"words_count":37,"completed_at":null,"completed_at_timestamp":null,"completed_by":null,"completed_by_email":null},{"language_iso":"en-us","users":[{"user_id":20181,"email":"bodrovis@protonmail.com","fullname":"Ilya
+        B"}],"groups":[],"keys":[15519786,15571975,15571976,15814906,20822936,20945747,20988544,20988547,20988554,20988567,20988568,20988569,20988570,20988571,20988596,21717815],"status":"created","progress":0,"initial_tm_leverage":[],"keys_count":16,"words_count":37,"completed_at":null,"completed_at_timestamp":null,"completed_by":null,"completed_by_email":null},{"language_iso":"ru","users":[{"user_id":33599,"email":"twilight_church@list.ru","fullname":"Joe"},{"user_id":20181,"email":"bodrovis@protonmail.com","fullname":"Ilya
+        B"}],"groups":[],"keys":[15571975,15571976,20822936,20988567,20988568,20988570,20988571,20988596,21717815],"status":"in
+        progress","progress":11,"initial_tm_leverage":[],"keys_count":9,"words_count":11,"completed_at":null,"completed_at_timestamp":null,"completed_by":null,"completed_by_email":null},{"language_iso":"es","users":[{"user_id":20181,"email":"bodrovis@protonmail.com","fullname":"Ilya
+        B"},{"user_id":33599,"email":"twilight_church@list.ru","fullname":"Joe"}],"groups":[],"keys":[15519786,15814906,20822936,20945747,20988544,20988547,20988567,20988568,20988569,20988570,20988571,20988596,21717815],"status":"created","progress":0,"initial_tm_leverage":[],"keys_count":13,"words_count":28,"completed_at":null,"completed_at_timestamp":null,"completed_by":null,"completed_by_email":null},{"language_iso":"f_over","users":[{"user_id":33599,"email":"twilight_church@list.ru","fullname":"Joe"},{"user_id":20181,"email":"bodrovis@protonmail.com","fullname":"Ilya
+        B"}],"groups":[],"keys":[15519786,15571975,15571976,20822936,20945747,20988544,20988547,20988567,20988568,20988569,20988570,20988571,20988596,21717815],"status":"created","progress":0,"initial_tm_leverage":[],"keys_count":14,"words_count":27,"completed_at":null,"completed_at_timestamp":null,"completed_by":null,"completed_by_email":null}],"auto_close_languages":true,"auto_close_task":true,"completed_at":null,"completed_at_timestamp":null,"completed_by":null,"completed_by_email":null,"do_lock_translations":false}}'
     http_version: 
-  recorded_at: Mon, 10 Dec 2018 17:43:53 GMT
+  recorded_at: Fri, 17 May 2019 17:15:52 GMT
 recorded_with: VCR 4.0.0
