--- a/spec/fixtures/vcr_cassettes/teams.yml
+++ b/spec/fixtures/vcr_cassettes/teams.yml
@@ -2,7 +2,7 @@
 http_interactions:
 - request:
     method: get
-    uri: https://api.lokalise.co/api2/teams/?limit=1&page=1
+    uri: https://api.lokalise.co/api2/teams?limit=1&page=2
     body:
       encoding: US-ASCII
       string: ''
@@ -10,7 +10,7 @@ http_interactions:
       Accept:
       - application/json
       User-Agent:
-      - ruby-lokalise-api gem/1.0.0.pre1
+      - ruby-lokalise-api gem/2.1.0
       X-api-token:
       - "<LOKALISE_TOKEN>"
   response:
@@ -21,7 +21,7 @@ http_interactions:
       server:
       - nginx
       date:
-      - Sun, 09 Dec 2018 17:46:44 GMT
+      - Fri, 17 May 2019 17:22:47 GMT
       content-type:
       - application/json
       transfer-encoding:
@@ -31,30 +31,22 @@ http_interactions:
       vary:
       - Accept-Encoding
       set-cookie:
-      - PHPSESSID=28cddf004513389a9948726ec82d8c4e; path=/; HttpOnly, locale=en_US;
-        expires=Tue, 08-Jan-2019 17:46:44 GMT; Max-Age=2592000; path=/; secure
+      - PHPSESSID=f7d3a5589e761e552e1bd11e847c667a; expires=Tue, 16-Jul-2019 17:22:47
+        GMT; Max-Age=5184000; path=/; secure; HttpOnly
       expires:
       - Thu, 19 Nov 1981 08:52:00 GMT
       cache-control:
       - no-store, no-cache, must-revalidate, no-store, no-cache
       pragma:
       - no-cache, no-cache
-      x-content-type-options:
-      - nosniff
-      x-frame-options:
-      - deny
-      x-xss-protection:
-      - 1; mode=block
-      strict-transport-security:
-      - max-age=31536000
       x-pagination-total-count:
-      - '1'
+      - '2'
       x-pagination-page-count:
-      - '1'
+      - '2'
       x-pagination-limit:
       - '1'
       x-pagination-page:
-      - '1'
+      - '2'
       access-control-allow-origin:
       - "*"
       access-control-allow-headers:
@@ -62,7 +54,7 @@ http_interactions:
     body:
       encoding: ASCII-8BIT
       string: '{"teams":[{"team_id":176692,"name":"Ilya''s Team","plan":"Trial","created_at":"2018-08-21
-        17:35:25 (Etc\/UTC)","quota_usage":{"users":4,"keys":25,"projects":5,"mau":0},"quota_allowed":{"users":999999999,"keys":999999999,"projects":999999999,"mau":999999999}}]}'
+        15:35:25 (Etc\/UTC)","created_at_timestamp":1534865725,"quota_usage":{"users":9,"keys":71,"projects":10,"mau":0},"quota_allowed":{"users":999999999,"keys":999999999,"projects":999999999,"mau":999999999}}]}'
     http_version: 
-  recorded_at: Sun, 09 Dec 2018 17:46:44 GMT
+  recorded_at: Fri, 17 May 2019 17:22:35 GMT
 recorded_with: VCR 4.0.0
