--- a/spec/fixtures/vcr_cassettes/translation.yml
+++ b/spec/fixtures/vcr_cassettes/translation.yml
@@ -10,7 +10,7 @@ http_interactions:
       Accept:
       - application/json
       User-Agent:
-      - ruby-lokalise-api gem/1.0.0.pre1
+      - ruby-lokalise-api gem/2.1.0
       X-api-token:
       - "<LOKALISE_TOKEN>"
   response:
@@ -21,7 +21,7 @@ http_interactions:
       server:
       - nginx
       date:
-      - Mon, 10 Dec 2018 18:04:33 GMT
+      - Fri, 17 May 2019 17:29:04 GMT
       content-type:
       - application/json
       transfer-encoding:
@@ -31,31 +31,23 @@ http_interactions:
       vary:
       - Accept-Encoding
       set-cookie:
-      - PHPSESSID=10c6109d0ade0b0271439e79dbad2dc2; path=/; HttpOnly, locale=en_US;
-        expires=Wed, 09-Jan-2019 18:04:33 GMT; Max-Age=2592000; path=/; secure
+      - PHPSESSID=b280540b1d3ee9381688004875ba3e07; expires=Tue, 16-Jul-2019 17:29:04
+        GMT; Max-Age=5184000; path=/; secure; HttpOnly
       expires:
       - Thu, 19 Nov 1981 08:52:00 GMT
       cache-control:
       - no-store, no-cache, must-revalidate, no-store, no-cache
       pragma:
       - no-cache, no-cache
-      x-content-type-options:
-      - nosniff
-      x-frame-options:
-      - deny
-      x-xss-protection:
-      - 1; mode=block
-      strict-transport-security:
-      - max-age=31536000
       access-control-allow-origin:
       - "*"
       access-control-allow-headers:
       - Content-Type
     body:
       encoding: ASCII-8BIT
-      string: '{"project_id":"803826145ba90b42d5d860.46800099","translation":{"translation_id":80015147,"key_id":15571975,"language_iso":"en","translation":"rspec
-        trans","modified_by":20181,"modified_by_email":"bodrovis@protonmail.com","modified_at":"2018-12-10
-        19:04:08 (Etc\/UTC)","is_reviewed":true,"reviewed_by":0,"is_fuzzy":false,"words":2}}'
+      string: '{"project_id":"803826145ba90b42d5d860.46800099","translation":{"translation_id":80015147,"key_id":15571975,"language_iso":"en","translation":"RSpec
+        is a testing suite","modified_by":20181,"modified_by_email":"bodrovis@protonmail.com","modified_at":"2019-03-26
+        16:41:31 (Etc\/UTC)","modified_at_timestamp":1553618491,"is_reviewed":false,"reviewed_by":0,"is_fuzzy":false,"words":5}}'
     http_version: 
-  recorded_at: Mon, 10 Dec 2018 18:04:33 GMT
+  recorded_at: Fri, 17 May 2019 17:28:52 GMT
 recorded_with: VCR 4.0.0
