--- a/spec/fixtures/vcr_cassettes/translations_prev_page.yml
+++ b/spec/fixtures/vcr_cassettes/translations_prev_page.yml
@@ -2,7 +2,7 @@
 http_interactions:
 - request:
     method: get
-    uri: https://api.lokalise.co/api2/projects/803826145ba90b42d5d860.46800099/translations?disable_references=0&limit=4&page=1
+    uri: https://api.lokalise.co/api2/projects/803826145ba90b42d5d860.46800099/translations?disable_references=0&filter_is_reviewed=0&limit=4&page=1
     body:
       encoding: US-ASCII
       string: ''
@@ -10,7 +10,7 @@ http_interactions:
       Accept:
       - application/json
       User-Agent:
-      - ruby-lokalise-api gem/1.0.1
+      - ruby-lokalise-api gem/2.1.0
       X-api-token:
       - "<LOKALISE_TOKEN>"
   response:
@@ -21,7 +21,7 @@ http_interactions:
       server:
       - nginx
       date:
-      - Tue, 11 Dec 2018 16:22:11 GMT
+      - Fri, 17 May 2019 16:55:14 GMT
       content-type:
       - application/json
       transfer-encoding:
@@ -31,26 +31,18 @@ http_interactions:
       vary:
       - Accept-Encoding
       set-cookie:
-      - PHPSESSID=a7ded822798846287cde8c0fe1768bde; path=/; HttpOnly, locale=en_US;
-        expires=Thu, 10-Jan-2019 16:22:11 GMT; Max-Age=2592000; path=/; secure
+      - PHPSESSID=89d3722a8c4579bc83051bf3e78f990e; expires=Tue, 16-Jul-2019 16:55:14
+        GMT; Max-Age=5184000; path=/; secure; HttpOnly
       expires:
       - Thu, 19 Nov 1981 08:52:00 GMT
       cache-control:
       - no-store, no-cache, must-revalidate, no-store, no-cache
       pragma:
       - no-cache, no-cache
-      x-content-type-options:
-      - nosniff
-      x-frame-options:
-      - deny
-      x-xss-protection:
-      - 1; mode=block
-      strict-transport-security:
-      - max-age=31536000
       x-pagination-total-count:
-      - '9'
+      - '187'
       x-pagination-page-count:
-      - '3'
+      - '47'
       x-pagination-limit:
       - '4'
       x-pagination-page:
@@ -61,11 +53,14 @@ http_interactions:
       - Content-Type
     body:
       encoding: ASCII-8BIT
-      string: '{"project_id":"803826145ba90b42d5d860.46800099","translations":[{"translation_id":79607647,"key_id":15519786,"language_iso":"ru","translation":"","modified_by":20181,"modified_by_email":"bodrovis@protonmail.com","modified_at":"2018-12-09
-        19:39:20 (Etc\/UTC)","is_reviewed":false,"reviewed_by":0,"is_fuzzy":false,"words":0},{"translation_id":80015148,"key_id":15571975,"language_iso":"ru","translation":"","modified_by":20181,"modified_by_email":"bodrovis@protonmail.com","modified_at":"2018-12-10
-        18:35:35 (Etc\/UTC)","is_reviewed":false,"reviewed_by":0,"is_fuzzy":false,"words":0},{"translation_id":80015151,"key_id":15571976,"language_iso":"ru","translation":"","modified_by":20181,"modified_by_email":"bodrovis@protonmail.com","modified_at":"2018-12-10
-        18:36:41 (Etc\/UTC)","is_reviewed":false,"reviewed_by":0,"is_fuzzy":false,"words":0},{"translation_id":79607646,"key_id":15519786,"language_iso":"en","translation":"","modified_by":20181,"modified_by_email":"bodrovis@protonmail.com","modified_at":"2018-12-09
-        19:39:20 (Etc\/UTC)","is_reviewed":false,"reviewed_by":0,"is_fuzzy":false,"words":0}]}'
+      string: '{"project_id":"803826145ba90b42d5d860.46800099","translations":[{"translation_id":79607647,"key_id":15519786,"language_iso":"ru","translation":"\u0415\u0449\u0451
+        \u043e\u0434\u0438\u043d \u0430\u043d\u0433\u043b\u0438\u0439\u0441\u043a\u0438\u0439
+        \u043a\u043b\u044e\u0447","modified_by":33599,"modified_by_email":"twilight_church@list.ru","modified_at":"2019-05-13
+        16:13:34 (Etc\/UTC)","modified_at_timestamp":1557764014,"is_reviewed":true,"reviewed_by":33599,"is_fuzzy":false,"words":4},{"translation_id":80015148,"key_id":15571975,"language_iso":"ru","translation":"","modified_by":20181,"modified_by_email":"bodrovis@protonmail.com","modified_at":"2018-12-10
+        17:35:35 (Etc\/UTC)","modified_at_timestamp":1544463335,"is_reviewed":true,"reviewed_by":33599,"is_fuzzy":true,"words":0},{"translation_id":80015151,"key_id":15571976,"language_iso":"ru","translation":"","modified_by":20181,"modified_by_email":"bodrovis@protonmail.com","modified_at":"2018-12-10
+        17:36:41 (Etc\/UTC)","modified_at_timestamp":1544463401,"is_reviewed":false,"reviewed_by":0,"is_fuzzy":true,"words":0},{"translation_id":82070311,"key_id":15814906,"language_iso":"ru","translation":"\u0444\u0443\u043d\u043a\u0446\u0438\u044f
+        \u043e\u0431\u0440\u0430\u0442\u043d\u043e\u0433\u043e \u0432\u044b\u0437\u043e\u0432\u0430","modified_by":33599,"modified_by_email":"twilight_church@list.ru","modified_at":"2019-05-13
+        16:09:17 (Etc\/UTC)","modified_at_timestamp":1557763757,"is_reviewed":true,"reviewed_by":33599,"is_fuzzy":false,"words":3}]}'
     http_version: 
-  recorded_at: Tue, 11 Dec 2018 16:22:08 GMT
+  recorded_at: Fri, 17 May 2019 16:55:02 GMT
 recorded_with: VCR 4.0.0
