--- a/spec/fixtures/vcr_cassettes/destroy_another_branch.yml
+++ b/spec/fixtures/vcr_cassettes/destroy_another_branch.yml
@@ -5,7 +5,7 @@ http_interactions:
     uri: https://api.lokalise.com/api2/projects/803826145ba90b42d5d860.46800099/branches/41306
     body:
       encoding: UTF-8
-      string: '{"_initial_path":"projects/803826145ba90b42d5d860.46800099/branches/41306"}'
+      string: ''
     headers:
       Accept:
       - application/json
@@ -41,6 +41,6 @@ http_interactions:
     body:
       encoding: ASCII-8BIT
       string: '{"project_id":"803826145ba90b42d5d860.46800099","branch_deleted":true}'
-    http_version: 
+    http_version:
   recorded_at: Wed, 30 Oct 2019 14:47:04 GMT
 recorded_with: VCR 5.0.0
