--- a/spec/fixtures/vcr_cassettes/remove_user_from_group_chained.yml
+++ b/spec/fixtures/vcr_cassettes/remove_user_from_group_chained.yml
@@ -5,7 +5,7 @@ http_interactions:
     uri: https://api.lokalise.com/api2/teams/176692/groups/515/members/remove
     body:
       encoding: UTF-8
-      string: '{"users":[35554],"_initial_path":"teams/176692/groups/515"}'
+      string: '{"users":[35554]}'
     headers:
       Accept:
       - application/json
@@ -47,6 +47,6 @@ http_interactions:
       encoding: ASCII-8BIT
       string: '{"team_id":176692,"group":{"group_id":515,"name":"Demo","permissions":{"is_admin":true,"is_reviewer":false,"admin_rights":["upload","download","tasks","contributors","screenshots","keys","languages","settings","activity","statistics"],"languages":[]},"created_at":"2019-03-19
         19:53:04 (Etc\/UTC)","created_at_timestamp":1553025184,"team_id":176692,"projects":["803826145ba90b42d5d860.46800099"],"members":[20181,25753]}}'
-    http_version: 
+    http_version:
   recorded_at: Sun, 19 May 2019 15:43:35 GMT
 recorded_with: VCR 4.0.0
