--- a/spec/fixtures/vcr_cassettes/update_another_translation_status.yml
+++ b/spec/fixtures/vcr_cassettes/update_another_translation_status.yml
@@ -5,7 +5,7 @@ http_interactions:
     uri: https://api.lokalise.com/api2/projects/803826145ba90b42d5d860.46800099/custom_translation_statuses/129
     body:
       encoding: UTF-8
-      string: '{"title":"updated rspec","color":"#0079bf","_initial_path":"projects/803826145ba90b42d5d860.46800099/custom_translation_statuses/129"}'
+      string: '{"title":"updated rspec","color":"#0079bf"}'
     headers:
       Accept:
       - application/json
@@ -47,6 +47,6 @@ http_interactions:
       encoding: ASCII-8BIT
       string: '{"project_id":"803826145ba90b42d5d860.46800099","custom_translation_status":{"status_id":129,"title":"updated
         rspec","color":"#0079bf"}}'
-    http_version: 
+    http_version:
   recorded_at: Wed, 17 Jul 2019 16:56:42 GMT
 recorded_with: VCR 5.0.0
