--- a/spec/fixtures/vcr_cassettes/queued_process_detailed3.yml
+++ b/spec/fixtures/vcr_cassettes/queued_process_detailed3.yml
@@ -2,7 +2,7 @@
 http_interactions:
 - request:
     method: get
-    uri: https://api.lokalise.com/api2/projects/803826145ba90b42d5d860.46800099/processes/6347ddfc2ed1bb855e670fd7ad16ce8552333af8
+    uri: https://api.lokalise.com/api2/projects/803826145ba90b42d5d860.46800099/processes/file-import/fb59937f47be1999b3643a7022d17bd46d807fad
     body:
       encoding: US-ASCII
       string: ''
@@ -10,7 +10,7 @@ http_interactions:
       Accept:
       - application/json
       User-Agent:
-      - ruby-lokalise-api gem/2.10.0
+      - ruby-lokalise-api gem/3.0.0
       X-api-token:
       - "<LOKALISE_TOKEN>"
   response:
@@ -31,7 +31,7 @@ http_interactions:
       cache-control:
       - max-age=0, must-revalidate, no-cache, no-store, private
       date:
-      - Mon, 11 May 2020 12:01:12 GMT
+      - Thu, 14 May 2020 10:25:13 GMT
       pragma:
       - no-cache
       x-content-type-options:
@@ -43,15 +43,15 @@ http_interactions:
       strict-transport-security:
       - max-age=31536000
       expires:
-      - Mon, 11 May 2020 12:01:12 GMT
+      - Thu, 14 May 2020 10:25:13 GMT
       access-control-allow-origin:
       - "*"
       access-control-allow-headers:
       - Content-Type
     body:
       encoding: ASCII-8BIT
-      string: '{"project_id":"803826145ba90b42d5d860.46800099","branch":"master","process":{"process_id":"6347ddfc2ed1bb855e670fd7ad16ce8552333af8","type":"file-import","status":"queued","message":"","created_by":"20181","created_by_email":"bodrovis@protonmail.com","created_at":"2020-05-11
-        11:45:31 (Etc\/UTC)","created_at_timestamp":1589197531,"url":"\/api2\/projects\/803826145ba90b42d5d860.46800099\/processes\/file-import\/6347ddfc2ed1bb855e670fd7ad16ce8552333af8"}}'
+      string: '{"project_id":"803826145ba90b42d5d860.46800099","branch":"master","process":{"process_id":"fb59937f47be1999b3643a7022d17bd46d807fad","type":"file-import","status":"finished","message":"","created_by":"20181","created_by_email":"bodrovis@protonmail.com","created_at":"2020-05-14
+        10:18:03 (Etc\/UTC)","created_at_timestamp":1589451483,"url":"\/api2\/projects\/803826145ba90b42d5d860.46800099\/processes\/file-import\/fb59937f47be1999b3643a7022d17bd46d807fad","files":[{"status":"finished","message":"","name_original":"rspec_async.yml","name_custom":null,"word_count_total":1,"key_count_total":1,"key_count_inserted":0,"key_count_updated":0,"key_count_skipped":1}]}}'
     http_version: null
-  recorded_at: Mon, 11 May 2020 12:01:12 GMT
+  recorded_at: Thu, 14 May 2020 10:25:07 GMT
 recorded_with: VCR 5.1.0
