--- a/spec/fixtures/vcr_cassettes/queued_process.yml
+++ b/spec/fixtures/vcr_cassettes/queued_process.yml
@@ -2,7 +2,7 @@
 http_interactions:
 - request:
     method: get
-    uri: https://api.lokalise.com/api2/projects/803826145ba90b42d5d860.46800099/processes/4191a4e54cb6433193e75eed55359c4021e6aa91
+    uri: https://api.lokalise.com/api2/projects/803826145ba90b42d5d860.46800099/processes/3b943469e6b3e324b5bdad639b122a623e6e7a1a
     body:
       encoding: US-ASCII
       string: ''
@@ -10,7 +10,7 @@ http_interactions:
       Accept:
       - application/json
       User-Agent:
-      - ruby-lokalise-api gem/2.10.0
+      - ruby-lokalise-api gem/3.0.0
       X-api-token:
       - "<LOKALISE_TOKEN>"
   response:
@@ -31,7 +31,7 @@ http_interactions:
       cache-control:
       - max-age=0, must-revalidate, no-cache, no-store, private
       date:
-      - Mon, 11 May 2020 11:26:17 GMT
+      - Fri, 15 May 2020 10:47:04 GMT
       pragma:
       - no-cache
       x-content-type-options:
@@ -43,15 +43,15 @@ http_interactions:
       strict-transport-security:
       - max-age=31536000
       expires:
-      - Mon, 11 May 2020 11:26:17 GMT
+      - Fri, 15 May 2020 10:47:04 GMT
       access-control-allow-origin:
       - "*"
       access-control-allow-headers:
       - Content-Type
     body:
       encoding: ASCII-8BIT
-      string: '{"project_id":"803826145ba90b42d5d860.46800099","branch":"master","process":{"process_id":"4191a4e54cb6433193e75eed55359c4021e6aa91","type":"file-import","status":"finished","message":"","created_by":"20181","created_by_email":"bodrovis@protonmail.com","created_at":"2020-05-11
-        11:17:52 (Etc\/UTC)","created_at_timestamp":1589195872,"url":"\/api2\/projects\/803826145ba90b42d5d860.46800099\/processes\/file-import\/4191a4e54cb6433193e75eed55359c4021e6aa91"}}'
+      string: '{"project_id":"803826145ba90b42d5d860.46800099","branch":"master","process":{"process_id":"3b943469e6b3e324b5bdad639b122a623e6e7a1a","type":"file-import","status":"finished","message":"","created_by":20181,"created_by_email":"bodrovis@protonmail.com","created_at":"2020-05-13
+        11:24:37 (Etc\/UTC)","created_at_timestamp":1589369077,"details":{"files":[{"status":"finished","message":"","name_original":"test_async.json","name_custom":null,"word_count_total":3,"key_count_total":3,"key_count_inserted":1,"key_count_updated":0,"key_count_skipped":2}]}}}'
     http_version: null
-  recorded_at: Mon, 11 May 2020 11:26:17 GMT
+  recorded_at: Fri, 15 May 2020 10:46:57 GMT
 recorded_with: VCR 5.1.0
