--- a/spec/fixtures/vcr_cassettes/upload_file_queued_reload.yml
+++ b/spec/fixtures/vcr_cassettes/upload_file_queued_reload.yml
@@ -2,7 +2,7 @@
 http_interactions:
 - request:
     method: get
-    uri: https://api.lokalise.com/api2/projects/803826145ba90b42d5d860.46800099/processes/fb59937f47be1999b3643a7022d17bd46d807fad
+    uri: https://api.lokalise.com/api2/projects/803826145ba90b42d5d860.46800099/processes/ff1876382b7ba81f2bb465da8f030196ec401fa6
     body:
       encoding: US-ASCII
       string: ''
@@ -31,7 +31,7 @@ http_interactions:
       cache-control:
       - max-age=0, must-revalidate, no-cache, no-store, private
       date:
-      - Thu, 14 May 2020 10:18:34 GMT
+      - Fri, 15 May 2020 10:39:33 GMT
       pragma:
       - no-cache
       x-content-type-options:
@@ -43,15 +43,15 @@ http_interactions:
       strict-transport-security:
       - max-age=31536000
       expires:
-      - Thu, 14 May 2020 10:18:34 GMT
+      - Fri, 15 May 2020 10:39:33 GMT
       access-control-allow-origin:
       - "*"
       access-control-allow-headers:
       - Content-Type
     body:
       encoding: ASCII-8BIT
-      string: '{"project_id":"803826145ba90b42d5d860.46800099","branch":"master","process":{"process_id":"fb59937f47be1999b3643a7022d17bd46d807fad","type":"file-import","status":"finished","message":"","created_by":"20181","created_by_email":"bodrovis@protonmail.com","created_at":"2020-05-14
-        10:18:03 (Etc\/UTC)","created_at_timestamp":1589451483,"url":"\/api2\/projects\/803826145ba90b42d5d860.46800099\/processes\/file-import\/fb59937f47be1999b3643a7022d17bd46d807fad"}}'
+      string: '{"project_id":"803826145ba90b42d5d860.46800099","branch":"master","process":{"process_id":"ff1876382b7ba81f2bb465da8f030196ec401fa6","type":"file-import","status":"finished","message":"","created_by":20181,"created_by_email":"bodrovis@protonmail.com","created_at":"2020-05-15
+        10:38:35 (Etc\/UTC)","created_at_timestamp":1589539115,"details":{"files":[{"status":"finished","message":"","name_original":"rspec_async.yml","name_custom":null,"word_count_total":1,"key_count_total":1,"key_count_inserted":1,"key_count_updated":0,"key_count_skipped":0}]}}}'
     http_version: null
-  recorded_at: Thu, 14 May 2020 10:18:29 GMT
+  recorded_at: Fri, 15 May 2020 10:39:26 GMT
 recorded_with: VCR 5.1.0
